Updated Button Testing

--- a/index.html
+++ b/index.html
@@ -25,17 +25,21 @@
                 <input
                   type="search"
                   placeholder="Type a city.."
-                  class="form-control form-control-sm"
+                  class="form-control "
                   id="city-input"
                   autocomplete="off"
                 />
               </div>
-              <div class="col-3">
+              <div class="col">
                 <input
                   type="submit"
                   value="Search"
-                  class="btn btn-sm btn-primary w-100 input-sm"
+                  class="btn  btn-primary w-100 input-sm"
                 />
+                </div>
+                 <div class="col">
+
+<label class="btn btn-success" for="btn-check"><i class="fa-solid fa-location-dot"></i></label>
                 </div>
                  </form>
                 
