HTML/CSS Button Update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    
       <form id="search-form" class="mb-3 input-sm">
             <div class="row">
-              <div class="col-9">
+              <div class="col-8">
                 <input
                   type="search"
                   placeholder="Type a city.."
@@ -41,6 +41,7 @@
 
 <label class="btn btn-success" for="btn-check"><i class="fa-solid fa-location-dot"></i></label>
                 </div>
+                
                  </form>
                 
 
@@ -51,10 +52,11 @@
       <div class="weather-app">
 
 <div class="buttons">
-        <button class="btn btn-sm btn-success"id="current-button"><i class="fa-solid fa-location-dot"></i></button>
-        <button onClick="window.location.reload();" class="btn btn-sm btn-outline-primary" id="refresh"><i class="fa-solid fa-arrows-rotate"></i></button>
+        <button class="btn btn-outline-dark btn-sm"id="conversion">Metric</button>
+        <button onClick="window.location.reload();" class="btn btn-outline-dark btn-sm" id="refresh"><i class="fa-solid fa-arrows-rotate"></i></button>
   </div>
 
+  
 
    
   <h1 id="city"><strong>Los Angeles</strong></h1>
