Created Weekday Forecast

--- a/index.html
+++ b/index.html
@@ -80,15 +80,9 @@
    </div>
   </div>
     </div>
+    <div class="weather-forecast" id="forecast">
 
-    <div class="container" id="forecast-1">
-<div class="forecast-1-wrapper">
- <div class="row">
-  <div class="col" id="weekday">Tuesday</div>
-   <div class="col" id="image"><i class="fa-solid fa-sun"></i></div>
-    <div class="col" id="weekday-temp">90 / 110 °C</div>
-
-  </div>
+    
 
 
 
