--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                
       
       <div class="weather-app-wrapper">
-      <div class="weather-app">
+      <div id="weather-app">
 
 <div class="buttons">
         <button class="btn btn-outline-dark btn-sm"id="conversion">Metric</button>
