Update Basic Format

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div id="update">Last updated:</div>
   <div id="date"></div>
   <div id="temperature"><strong></strong></div>
-  <span id="units"> °F</span> 
+  <span id="units"> <a href="#" id="fahrenheit-link">°F </a></span> 
 
 <img id="icon" src="" alt="">
         
