Update Link Style

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
             target="_blank"
             >Open-source code</a
           >
-          by Nicole Brodkin
+          by <a
+            href="https://www.nikoteenie.com"
+            target="_blank"
+            >Nicole Brodkin</a
+          >
         </small>
       </div>
     </div>
