--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
 
         <div class="weather-forecast" id="forecast"></div>
 
-        <small id="footer">
+        <small>
           <a
+          class= "footer"
             href="https://github.com/Nikoteenie/My-Weather-App.git"
             target="_blank"
             >Open-source code</a
           >
           by <a
+          class="footer"
             href="https://www.nikoteenie.com"
             target="_blank"
             >Nicole Brodkin</a
